[GLib] Media session manager unable to handle more than one session https://bugs.webkit.org/show_bug.cgi?id=230250

Patch by Philippe Normand <pnormand@igalia.com> on 2021-10-02
Reviewed by Adrian Perez de Castro.

Source/WebCore:

Each session now maintains its own connection to the D-Bus session, allowing to safely
expose the corresponding MPRIS objecs on the bus. Most of the D-Bus and GVariant handling
has been refactored to the new MediaSessionGLib module.

* platform/SourcesGLib.txt:
* platform/audio/glib/MediaSessionGLib.cpp: Added.
(WebCore::getCommand):
(WebCore::handleMethodCall):
(WebCore::getMprisProperty):
(WebCore::handleGetProperty):
(WebCore::handleSetProperty):
(WebCore::MediaSessionGLib::create):
(WebCore::MediaSessionGLib::MediaSessionGLib):
(WebCore::MediaSessionGLib::~MediaSessionGLib):
(WebCore::MediaSessionGLib::nameLost):
(WebCore::MediaSessionGLib::emitPositionChanged):
(WebCore::MediaSessionGLib::updateNowPlaying):
(WebCore::MediaSessionGLib::getMetadataAsGVariant):
(WebCore::MediaSessionGLib::getPlaybackStatusAsGVariant):
(WebCore::MediaSessionGLib::emitPropertiesChanged):
(WebCore::MediaSessionGLib::playbackStatusChanged):
(WebCore::MediaSessionGLib::getActiveSessionPosition):
* platform/audio/glib/MediaSessionGLib.h: Added.
(WebCore::MediaSessionGLib::manager const):
* platform/audio/glib/MediaSessionManagerGLib.cpp:
(WebCore::PlatformMediaSessionManager::create):
(WebCore::MediaSessionManagerGLib::MediaSessionManagerGLib):
(WebCore::MediaSessionManagerGLib::addSession):
(WebCore::MediaSessionManagerGLib::removeSession):
(WebCore::MediaSessionManagerGLib::sessionStateChanged):
(WebCore::MediaSessionManagerGLib::clientCharacteristicsChanged):
(WebCore::MediaSessionManagerGLib::updateNowPlayingInfo):
* platform/audio/glib/MediaSessionManagerGLib.h:
(WebCore::MediaSessionManagerGLib::mprisInterface const):

Source/WTF:

* wtf/glib/GRefPtr.h: Forward-declare GDBusConnection.

Canonical link: https://commits.webkit.org/242424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283437 268f45cc-cd09-0410-ab3c-d52691b4dbfc